--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Portfolio-Ahmed Baba</title>
+        <title>DestroHaxs-Ahmed Baba</title>
         <meta name="description" content="Best Person in the world">
         <meta name="keywords" content="Ahmed,baba,destrohaxs,gaming,coding">
         <link rel="stylesheet" href="css/style.css">
